--- a/INN_ReneWind_Main_Project_FullCode_Notebook.ipynb
+++ b/INN_ReneWind_Main_Project_FullCode_Notebook.ipynb
@@ -1068,12 +1068,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "aNqOKbH9kohO",
-        "outputId": "0b94a6c1-446c-45f1-e72f-242a1a9be1a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "aNqOKbH9kohO",
+        "outputId": "0b94a6c1-446c-45f1-e72f-242a1a9be1a1"
       },
       "execution_count": 28,
       "outputs": [
@@ -1112,13 +1112,82 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Missing Values"
+      ],
       "metadata": {
-        "id": "C-xgnTbGb4CY"
+        "id": "XOlCxO_CmCZv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "C-xgnTbGb4CY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "be9e7a1f-5248-4c21-e45a-4ee6ee17c8d5"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Train missing values: 36\n",
+            "Test missing values: 11\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Confirm no missing values\n",
+        "print(\"Train missing values:\", train_df.isnull().sum().sum())\n",
+        "print(\"Test missing values:\", test_df.isnull().sum().sum())\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Separate Features and Target"
+      ],
+      "metadata": {
+        "id": "VX5hMCdSmPGs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = train_df.drop('Target', axis=1)\n",
+        "y = train_df['Target']\n"
+      ],
+      "metadata": {
+        "id": "_fqAiPGSmROc"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Train-Test Split (For Model Tuning)"
+      ],
+      "metadata": {
+        "id": "YYhoQsIAmawD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_val, y_train, y_val = train_test_split(\n",
+        "    X, y, test_size=0.2, stratify=y, random_state=42\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "JONvlcwzmbsB"
+      },
+      "execution_count": 32,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
